--- a/src/main/resources/templates/mods.html
+++ b/src/main/resources/templates/mods.html
@@ -14,7 +14,7 @@
 
     <div class="row">
         <table class="table">
-            <thead class="thead-light">
+            <thead class="thead-dark">
             <tr>
                 <th>Id</th>
                 <th>Name</th>
